finished writing code from last class. Ready for testing (29/08)
