# src/swagger-documentation.json
@@ -1,7 +1,7 @@
 {
   "swagger": "2.0",
   "info": {
-    "version": "1.0.0",
+    "version": "1.0.1",
     "title": "API Exemplo JWT + Swagger",
     "description": "Descrição da API..."
   },
@@ -41,13 +41,13 @@
             }
           },
           "400": {
-            "description": "Bad Request"
+            "description": "Not found"
           },
           "401": {
             "description": "Unauthorized"
           },
           "500": {
-            "description": "Internal Server Error"
+            "description": "Server failure"
           }
         },
         "security": [{
@@ -68,9 +68,130 @@
             "schema": {
               "type": "object",
               "properties": {
-                "id": {
+                "name": {
                   "example": "any"
                 },
+                "email": {
+                  "example": "any"
+                },
+                "password": {
+                  "example": "any"
+                }
+              }
+            },
+            "description": "Nome do usuário",
+            "required": true
+          },
+          {
+            "name": "email",
+            "in": "body",
+            "description": "E-mail do usuário",
+            "required": true,
+            "schema": {
+              "type": "object",
+              "properties": {}
+            }
+          },
+          {
+            "name": "password",
+            "in": "body",
+            "description": "Senha do usuário",
+            "required": true,
+            "schema": {
+              "type": "object",
+              "properties": {}
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Success",
+            "schema": {
+              "$ref": "#/definitions/User"
+            }
+          },
+          "201": {
+            "description": "Created"
+          },
+          "400": {
+            "description": "Not found"
+          },
+          "401": {
+            "description": "Unauthorized"
+          },
+          "500": {
+            "description": "Server failure"
+          }
+        },
+        "security": [{
+          "Bearer": []
+        }]
+      }
+    },
+    "/user/{id}": {
+      "get": {
+        "tags": [],
+        "description": "Listar um usuário",
+        "parameters": [{
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          },
+          {
+            "name": "authorization",
+            "in": "header",
+            "type": "string"
+          },
+          {
+            "name": "id",
+            "in": "param",
+            "required": true,
+            "type": "string",
+            "description": "Id do usuário"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Success",
+            "schema": {
+              "$ref": "#/definitions/User"
+            }
+          },
+          "400": {
+            "description": "Not found"
+          },
+          "401": {
+            "description": "Unauthorized"
+          },
+          "500": {
+            "description": "Server failure"
+          }
+        },
+        "security": [{
+          "Bearer": []
+        }]
+      },
+      "put": {
+        "tags": [],
+        "description": "Atualizar usuários",
+        "parameters": [{
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          },
+          {
+            "name": "authorization",
+            "in": "header",
+            "type": "string"
+          },
+          {
+            "name": "name",
+            "in": "body",
+            "schema": {
+              "type": "object",
+              "properties": {
                 "name": {
                   "example": "any"
                 },
@@ -100,9 +221,111 @@
           "200": {
             "description": "Success",
             "schema": {
+              "$ref": "#/definitions/User"
+            }
+          },
+          "400": {
+            "description": "Not found"
+          },
+          "401": {
+            "description": "Unauthorized"
+          },
+          "500": {
+            "description": "Server failure"
+          }
+        },
+        "security": [{
+          "Bearer": []
+        }]
+      },
+      "delete": {
+        "tags": [],
+        "description": "Deletar usuários",
+        "parameters": [{
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          },
+          {
+            "name": "authorization",
+            "in": "header",
+            "type": "string"
+          },
+          {
+            "name": "id",
+            "in": "param",
+            "required": true,
+            "type": "string",
+            "description": "Id do usuário"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Success"
+          },
+          "204": {
+            "description": "No Content"
+          },
+          "400": {
+            "description": "Not found"
+          },
+          "401": {
+            "description": "Unauthorized"
+          },
+          "500": {
+            "description": "Server failure"
+          }
+        },
+        "security": [{
+          "Bearer": []
+        }]
+      }
+    },
+    "/login": {
+      "post": {
+        "description": "",
+        "parameters": [{
+          "name": "body",
+          "in": "body",
+          "schema": {
+            "type": "object",
+            "properties": {
+              "email": {
+                "example": "any"
+              },
+              "password": {
+                "example": "any"
+              }
+            }
+          }
+        }],
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "400": {
+            "description": "Bad Request"
+          }
+        }
+      }
+    },
+    "/grade": {
+      "get": {
+        "tags": [],
+        "description": "Listar notas",
+        "parameters": [{
+          "name": "authorization",
+          "in": "header",
+          "type": "string"
+        }],
+        "responses": {
+          "200": {
+            "description": "Success",
+            "schema": {
               "type": "array",
               "items": {
-                "$ref": "#/definitions/User"
+                "$ref": "#/definitions/Grade"
               },
               "xml": {
                 "name": "main"
@@ -116,9 +339,41 @@
         "security": [{
           "Bearer": []
         }]
+      },
+      "post": {
+        "description": "",
+        "parameters": [{
+            "name": "authorization",
+            "in": "header",
+            "type": "string"
+          },
+          {
+            "name": "body",
+            "in": "body",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "userId": {
+                  "example": "any"
+                },
+                "value": {
+                  "example": "any"
+                }
+              }
+            }
+          }
+        ],
+        "responses": {
+          "201": {
+            "description": "Created"
+          },
+          "401": {
+            "description": "Unauthorized"
+          }
+        }
       }
     },
-    "/user/{id}": {
+    "/grade/{id}": {
       "get": {
         "description": "",
         "parameters": [{
@@ -154,6 +409,21 @@
             "name": "authorization",
             "in": "header",
             "type": "string"
+          },
+          {
+            "name": "body",
+            "in": "body",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "userId": {
+                  "example": "any"
+                },
+                "value": {
+                  "example": "any"
+                }
+              }
+            }
           }
         ],
         "responses": {
@@ -180,8 +450,8 @@
           }
         ],
         "responses": {
-          "200": {
-            "description": "OK"
+          "204": {
+            "description": "No Content"
           },
           "401": {
             "description": "Unauthorized"
@@ -189,30 +459,27 @@
         }
       }
     },
-    "/login": {
-      "post": {
+    "/user/{userId}/grade": {
+      "get": {
         "description": "",
         "parameters": [{
-          "name": "body",
-          "in": "body",
-          "schema": {
-            "type": "object",
-            "properties": {
-              "email": {
-                "example": "any"
-              },
-              "password": {
-                "example": "any"
-              }
-            }
+            "name": "userId",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          },
+          {
+            "name": "authorization",
+            "in": "header",
+            "type": "string"
           }
-        }],
+        ],
         "responses": {
           "200": {
             "description": "OK"
           },
-          "400": {
-            "description": "Bad Request"
+          "401": {
+            "description": "Unauthorized"
           }
         }
       }
@@ -228,11 +495,28 @@
         },
         "name": {
           "type": "string",
-          "example": "Vinicius"
+          "example": "Jef"
         },
         "email": {
           "type": "string",
-          "example": "vini@email.com"
+          "example": "jef@example.com"
+        }
+      }
+    },
+    "Grade": {
+      "type": "object",
+      "properties": {
+        "id": {
+          "type": "number",
+          "example": 1
+        },
+        "userId": {
+          "type": "number",
+          "example": 1
+        },
+        "value": {
+          "type": "number",
+          "example": 100
         }
       }
     },
@@ -240,6 +524,12 @@
       "type": "array",
       "items": {
         "$ref": "#/definitions/User"
+      }
+    },
+    "GradeList": {
+      "type": "array",
+      "items": {
+        "$ref": "#/definitions/Grade"
       }
     }
   },
